--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,10 @@ buildSrc/build
 /src/asciidoc/build
 target/
 
+# Projects not in this branch
+integration-tests/
+spring-core/kotlin-coroutines/
+
 # Eclipse artifacts, including WTP generated manifests
 .classpath
 .project
@@ -34,7 +38,6 @@ spring-*/src/main/java/META-INF/MANIFEST.MF
 *.ipr
 *.iws
 .idea
-.build
 out
 test-output
 atlassian-ide-plugin.xml
