--- a/spring-aspects/spring-aspects.gradle
+++ b/spring-aspects/spring-aspects.gradle
@@ -83,6 +83,7 @@ dependencies {
 	ajc("org.aspectj:aspectjtools:${aspectjVersion}")
 	rt("org.aspectj:aspectjrt:${aspectjVersion}")
 	compile("org.aspectj:aspectjweaver:${aspectjVersion}")
+	compile("org.aspectj:aspectjrt:${aspectjVersion}")
 	optional(project(":spring-aop"))  // for @Async support
 	optional(project(":spring-beans"))  // for @Configurable support
 	optional(project(":spring-context"))  // for @Enable* support
