--- a/spring-source-debug/build.gradle
+++ b/spring-source-debug/build.gradle
@@ -11,5 +11,7 @@ repositories {
 
 dependencies {
     compile(project(":spring-context"))
+    compile group: 'org.aspectj', name: 'aspectjweaver', version: '1.9.6'
+    compile group: 'org.aspectj', name: 'aspectjrt', version: '1.9.6'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
