--- a/spring-source-debug/build.gradle
+++ b/spring-source-debug/build.gradle
@@ -13,5 +13,6 @@ dependencies {
     compile(project(":spring-context"))
     compile group: 'org.aspectj', name: 'aspectjweaver', version: '1.9.6'
     compile group: 'org.aspectj', name: 'aspectjrt', version: '1.9.6'
+    compile group: 'org.projectlombok', name: 'lombok', version: '1.18.12'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
