--- a/spring-source-debug/build.gradle
+++ b/spring-source-debug/build.gradle
@@ -15,4 +15,7 @@ dependencies {
     compile group: 'org.aspectj', name: 'aspectjrt', version: '1.9.6'
     compile group: 'org.projectlombok', name: 'lombok', version: '1.18.12'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    // https://mvnrepository.com/artifact/mysql/mysql-connector-java
+    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.21'
+
 }
