--- a/spring-source-debug/build.gradle
+++ b/spring-source-debug/build.gradle
@@ -11,6 +11,8 @@ repositories {
 
 dependencies {
     compile(project(":spring-context"))
+    compile(project(":spring-tx"))
+    compile(project(":spring-jdbc"))
     compile group: 'org.aspectj', name: 'aspectjweaver', version: '1.9.6'
     compile group: 'org.aspectj', name: 'aspectjrt', version: '1.9.6'
     compile group: 'org.projectlombok', name: 'lombok', version: '1.18.12'
